--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.7.0",
     "mongoosedao": "^1.0.13",
+    "node-xlsx": "^0.7.4",
     "superagent": "^3.0.0"
   },
   "devDependencies": {},
